# finder-plus

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
docs/: BUILD.md  CONFIG.md  KEYBOARD.md  USER_GUIDE.md
src/: app.c  app.h  main.c
src/ai/: ai_common.h  bert_wrapper.h  clip.c  clip.h  clip_patched.cpp  clip_wrapper.h  duplicates.c  duplicates.h  embeddings.c  embeddings.h  indexer.c  indexer.h  nl_operations.c  nl_operations.h  organization.c  organization.h  semantic_search.c  semantic_search.h  smart_rename.c  smart_rename.h  summarize.c  summarize.h  summarize_async.c  summarize_async.h  vectordb.c  vectordb.h  visual_search.c  visual_search.h
src/api/: auth.c  auth.h  claude_client.c  claude_client.h  gemini_client.c  gemini_client.h  http_client.c  http_client.h
src/core/: filesystem.c  filesystem.h  git.c  git.h  network.c  network.h  operation_queue.c  operation_queue.h  operations.c  operations.h  search.c  search.h
src/platform/: clipboard.h  clipboard.m  fsevents.c  fsevents.h  trash.h  trash.m
src/tools/: tool_executor.c  tool_executor.h  tool_registry.c  tool_registry.h
src/ui/: breadcrumb.c  breadcrumb.h  browser.c  browser.h  command_bar.c  command_bar.h  context_menu.c  context_menu.h  dialog.c  dialog.h  dual_pane.c  dual_pane.h  file_view_modal.c  file_view_modal.h  palette.c  palette.h  preview.c  preview.h  progress_indicator.c  progress_indicator.h  queue_panel.c  queue_panel.h  sidebar.c  sidebar.h  statusbar.c  statusbar.h  tabs.c  tabs.h  video.c  video.h
src/utils/: config.c  config.h  font.c  font.h  keybindings.c  keybindings.h  perf.c  perf.h  text.c  text.h  theme.c  theme.h
tests/: test_ai.c  test_claude_client.c  test_config.c  test_context_menu.c  test_dialog.c  test_dual_pane.c  test_file_view_modal.c  test_filesystem.c  test_font.c  test_gemini_client.c  test_git.c  test_http_client.c  test_keybindings.c  test_main.c  test_network.c  test_operation_queue.c  test_operations.c  test_perf.c  test_performance.c  test_phase2.c  test_phase6.c  test_preview.c  test_progress_indicator.c  test_search.c  test_selection.c  test_tabs.c  test_tool_executor.c  test_tool_registry.c  test_video.c
